--- a/LinuxSysProgramming/unpv22e/pxsem/Makefile
+++ b/LinuxSysProgramming/unpv22e/pxsem/Makefile
@@ -3,12 +3,15 @@ include ../Make.defines
 PROGS =	semcreate semgetvalue semwait sempost semunlink \
 		prodcons1 prodcons2 prodcons3 prodcons4 \
 		deadlock semsysconf testeintr \
-		mycat1 mycat2
+		mycat1 mycat2 semlib
 
 all:	${PROGS}
 
 semcreate:	semcreate.o
 		${CC} ${CFLAGS} -o $@ semcreate.o ${LIBS}
+
+semlib:		semlib.o
+		${CC} ${CFLAGS} -o $@ semlib.o ${LIBS}
 
 semgetvalue:	semgetvalue.o
 		${CC} ${CFLAGS} -o $@ semgetvalue.o ${LIBS}
